--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -10,10 +10,11 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
+    
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
 
-  <!-- Navbar desde fragmento -->
-  <div th:replace="fragments/navbar :: navbar"></div>
 
+  
   <!-- Header -->
   <header class="border-bottom bg-light py-4">
       <div class="container">
@@ -71,7 +72,7 @@
           <div class="col-lg-4 col-md-6 col-sm-12 d-flex">
               <div class="card shadow flex-fill h-100">
                   <div class="ratio ratio-4x3">
-                      <img th:src="@{../static/img/lib6.jpg}" class="card-img-top img-fluid" alt="Libro 1">
+                      <img th:src="@{img/lib6.jpg}" class="card-img-top img-fluid" alt="Libro 1">
                   </div>
                   <h3 class="card-title text-center p-2">Orgullo y Prejuicio</h3>
               </div>
@@ -79,7 +80,7 @@
           <div class="col-lg-4 col-md-6 col-sm-12 d-flex">
               <div class="card shadow flex-fill h-100">
                   <div class="ratio ratio-4x3">
-                      <img th:src="@{../static/img/lib7.jpg}" class="card-img-top img-fluid" alt="Libro 2">
+                      <img th:src="@{img/lib7.jpg}" class="card-img-top img-fluid" alt="Libro 2">
                   </div>
                   <h3 class="card-title text-center p-2">Al final los dos mueren</h3>
               </div>
@@ -87,7 +88,7 @@
           <div class="col-lg-4 col-md-6 col-sm-12 d-flex">
               <div class="card shadow flex-fill h-100">
                   <div class="ratio ratio-4x3">
-                      <img th:src="@{../static/img/lib8.jpg}" class="card-img-top img-fluid" alt="Libro 3">
+                      <img th:src="@{img/lib8.jpg}" class="card-img-top img-fluid" alt="Libro 3">
                   </div>
                   <h3 class="card-title text-center p-2">Nosotros en la Luna</h3>
               </div>
@@ -95,10 +96,7 @@
       </div>
   </section>
 
-  <!-- Footer desde fragmento -->
-  <div th:replace="fragments/footer :: footer"></div>
+  <div th:replace="~{fragments/footer :: footer}"></div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
