--- a/demo/src/main/resources/templates/fragments/navbar.html
+++ b/demo/src/main/resources/templates/fragments/navbar.html
@@ -1,23 +1,25 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary-subtle" th:fragment="navbar">
-    <div class="container-fluid">
-        <a class="navbar-brand text-primary opacity-75" href="/inicio">
-            <img src="img/lib-logo1.jpg" width="30" height="30" alt="Logo"> Librería Bibliosfera
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" 
-                aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link active text-primary opacity-75" href="/inicio">Inicio</a></li>
-                <li class="nav-item"><a class="nav-link text-primary opacity-75" href="/catalogo">Catálogo</a></li>
-                <li class="nav-item"><a class="nav-link text-primary opacity-75" href="/nosotros">Nosotros</a></li>
-                <li class="nav-item"><a class="nav-link text-primary opacity-75" href="/comprar">Comprar</a></li>
-            </ul>
-        </div>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+</head>
+<body>
+<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" th:href="@{/inicio}">Bibliosfera</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link" th:href="@{/inicio}">Inicio</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/catalogo}">Catálogo</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/nosotros}">Nosotros</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/compras}">Comprar</a></li>
+      </ul>
     </div>
+  </div>
 </nav>
+</body>
+</html>
