--- a/demo/src/main/resources/templates/fragments/navbar.html
+++ b/demo/src/main/resources/templates/fragments/navbar.html
@@ -17,7 +17,7 @@
         <li class="nav-item"><a class="nav-link" th:href="@{/catalogo}">Catálogo</a></li>
         <li class="nav-item"><a class="nav-link" th:href="@{/nosotros}">Nosotros</a></li>
         <li class="nav-item"><a class="nav-link" th:href="@{/compras}">Comprar</a></li>
-        <li class="nav-item"><a class="nav-link" th:href="@{/graficos}">Graficos</a></li>
+        <li class="nav-item"><a class="nav-link" th:href="@{/recomendaciones}">Recomendaciones</a></li>
       </ul>
     </div>
   </div>
