--- a/demo/src/main/resources/templates/catalogo.html
+++ b/demo/src/main/resources/templates/catalogo.html
@@ -72,7 +72,8 @@
                 
                 <div class="col-md-4 col-12 mt-2 mt-md-0 d-grid gap-2 d-md-flex justify-content-md-end">
                     
-                    <form th:action="@{/carrito/agregar/{id}(id=${libro.id})}" method="post" class="d-grid d-md-inline-block">
+                    <form th:action="@{/carrito/agregar}" method="post" class="d-grid d-md-inline-block">
+                        <input type="hidden" name="idLibro" th:value="${libro.id}"/> 
                         <input type="hidden" name="cantidad" value="1"/> 
                         <button type="submit" class="btn btn-success btn-sm me-md-2">
                             <i class="bi bi-cart-plus"></i> Añadir
