--- a/demo/src/main/resources/templates/login.html
+++ b/demo/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@
             background-color: white;
         }
         .logo-text {
-            color: #007bff; /* Azul primario */
+            color: #007bff;
             font-weight: bold;
         }
     </style>
